--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+personal academic project
+==================================================================
 unfolding_app_template and UC San Diego/Coursera MOOC starter code
 ==================================================================
 
